add telegram dep